Revert "Fix callout icon alignment"
This reverts commit 20343b7d9a3469f42831dabcc6923f6c19045e27.

--- a/theme.css
+++ b/theme.css
@@ -1237,10 +1237,6 @@ body.background-image-enabled {
 .callout.is-collapsible .callout-title {
   cursor: pointer !important;
 }
-.callout-icon {
-  margin-top: unset;
-  align-self: center;
-}
 .callout-icon svg.svg-icon {
   color: rgb(var(--callout-color));
 }
